<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/everyone"
        android:text="@string/delete_for_everyone"
        android:textAlignment="textEnd"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold|normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sfdisplaybold"
        />
    <TextView
        android:id="@+id/cancel"
        android:text="@string/cancel"
        android:textAlignment="textEnd"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold|normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sfdisplaybold"
        />
    <TextView
        android:id="@+id/delete"
        android:text="@string/delete_for_me"
        android:textAlignment="textEnd"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold|normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sfdisplaybold"
        />



</LinearLayout>