<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:id="@+id/main" android:layout_width="match_parent" android:layout_height="match_parent" tools:context=".VerificationActivity" android:background="#FFFFFF">
    <!--  CardView for better aesthetics  -->
    <androidx.cardview.widget.CardView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_margin="32dp" android:elevation="4dp" android:padding="16dp" app:cardCornerRadius="8dp" app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:padding="16dp">
            <ImageView android:layout_width="300dp" android:layout_height="300dp" android:src="@drawable/verification"/>
            <!--  Instruction TextView  -->
            <TextView android:id="@+id/tv_instructions" android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_num"
                android:textSize="16sp"
                android:textColor="#333333"
                android:gravity="center"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/sfdisplaybold"/>
            <!--  EditText for OTP  -->
            <EditText android:id="@+id/et_verification_code" android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number" android:fontFamily="@font/sfdisplayregular" android:inputType="phone" android:gravity="center" android:ems="6" android:background="@drawable/rounded_edittext" android:padding="12dp" android:textColor="#000000" android:textSize="16sp" android:layout_marginBottom="16dp"
                />
            <!--  Submit Button  -->
            <Button android:id="@+id/continue_button" android:fontFamily="@font/sfdisplaybold" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/submit" android:backgroundTint="#6200EE" android:textColor="#FFFFFF" android:textAllCaps="false" android:padding="12dp" android:textSize="16sp" android:layout_marginTop="16dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>